; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/extr_sndout_sdl.c_sndout_sdl_wait.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/extr_sndout_sdl.c_sndout_sdl_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@buf_r = common dso_local global i32 0, align 4
@buf_w = common dso_local global i32 0, align 4
@BUF_MASK = common dso_local global i32 0, align 4
@BUF_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sndout_sdl_wait() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %0, %14
  %3 = load i32, i32* @buf_r, align 4
  %4 = load i32, i32* @buf_w, align 4
  %5 = sub nsw i32 %3, %4
  %6 = sub nsw i32 %5, 2
  %7 = load i32, i32* @BUF_MASK, align 4
  %8 = and i32 %6, %7
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @BUF_LEN, align 4
  %11 = sdiv i32 %10, 2
  %12 = icmp sge i32 %9, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %16

14:                                               ; preds = %2
  %15 = call i32 @SDL_Delay(i32 4)
  br label %2

16:                                               ; preds = %13
  ret void
}

declare dso_local i32 @SDL_Delay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
